--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,8 @@ jobs:
 
       - name: Get Package 
         run: ./get-app-jar.sh
-        
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
       # - name: deploy to production step with soruce code
       #   uses: azure/spring-cloud-deploy@v1
       #   with:
