--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,6 +2,10 @@ name: Deplofy
 
 on: push
 
+# env:
+#   ASC_PACKAGE_PATH: ${{ github.workspace }}
+#   AZURE_SUBSCRIPTION: <azure subscription name>
+
 jobs:
   deploy_to_production:
     runs-on: ubuntu-latest
