--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,6 +22,7 @@ jobs:
       - name: Get Package 
         run: ./get-app-jar.sh
         env:
+          APP_VERSION: "1.0.0"
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
 
       - name: deploy to production with artifact
