--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,14 +2,11 @@ name: Deploy
 
 on: push
 
-# env:
-#   ASC_PACKAGE_PATH: ${{ github.workspace }}
-#   AZURE_SUBSCRIPTION: <azure subscription name>
 
 jobs:
   deploy_to_production:
     runs-on: ubuntu-latest
-    name: deploy to production with soruce code
+    name: deploy app version configured in versions file
     steps:
       - name: Checkout GitHub Action
         uses: actions/checkout@v3
