--- a/.github/workflows/demo-time-deploy.yml
+++ b/.github/workflows/demo-time-deploy.yml
@@ -6,6 +6,8 @@ on:
       - 'apps/demo-time/**'
 
 jobs:
+  test: 
+  
   call-workflow-passing-data:
     uses: ./.github/workflows/deploy.yml
     with:
