--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,6 +9,9 @@ on:
       service-name:
         required: true
         type: string
+    secrets:
+      AZURE_CREDENTIALS:
+        required: true
  
 jobs:
   deploy_to_production:
