--- a/.github/workflows/demo-time-deploy.yml
+++ b/.github/workflows/demo-time-deploy.yml
@@ -6,11 +6,40 @@ on:
       - 'apps/demo-time/**'
 
 jobs:
-  call-workflow-passing-data:
-    uses: ./.github/workflows/deploy.yml
-    with:
-      app-name: "demo-time"
-      service-name: "demo-asa"
-    secrets:
-      AZURE_CREDENTIALS:  ${{ secrets.AZURE_CREDENTIALS }}
-   
+  deploy_to_production:
+    runs-on: ubuntu-latest
+    name: deploy app version configured in versions file
+    steps:
+      - name: Checkout GitHub Action
+        uses: actions/checkout@v3
+
+      - name: Login via Azure CLI
+        uses: azure/login@v1
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+      
+      - name: Detrmine app version to deploy
+        run: |
+          cat apps/demo-time/version >> $GITHUB_ENV
+
+      - name: Configured application version for deployment
+        run: |
+          echo "${{ env.APP_VERSION }}" 
+
+      - name: Get Package 
+        run: ./get-app-jar.sh
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
+
+      - name: deploy to production with artifact
+        uses: azure/spring-apps-deploy@v1
+        with:
+          azure-subscription: ${{ vars.AZURE_SUBSCRIPTION }}
+          action: Deploy
+          service-name: demo-asa
+          app-name: demo-time
+          use-staging-deployment: false
+          create-new-deployment: true
+          package: demo-time-${{ env.APP_VERSION }}.jar
+
+  
